Message: Fix pin dialog z-index (#6576)

--- a/src/components/ui/Modal.scss
+++ b/src/components/ui/Modal.scss
@@ -3,7 +3,8 @@
   z-index: var(--z-modal);
   color: var(--color-text);
 
-  &.confirm {
+  &.confirm,
+  &.pin {
     z-index: var(--z-modal-confirm);
   }
 
